<resources>
    <string name="app_name">Maast</string>
    <string name="the_recipe">Welcome to the online shop for Maast - A versatile collection of leather bags.\n\nBy breaking down The Maast bag into separate pieces we allow the customer to be the final designer.\n
Create the combination you love and make a style of your own. Every style is unique, because nobody is like you. Choose between many colors, shapes, patterns and textures. The possibilities are endless! </string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="line">________________________________________________________________________</string>
    <string name="establieshed_year">est.2017</string>
    <string name="the_n_recipe_line">The \n Recipe\n_____________________</string>
    <string name="oslo">Oslo</string>
    <string name="body">Body</string>
    <string name="flap">flap</string>
    <string name="handle">Handle</string>
    <string name="strap">Strap</string>
    <string name="or">----or----</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="create_new_account">Create new account</string>

</resources>